Fix #273 - icon backdrops misaligned in Gridster mobile mode (#280)

--- a/web/assets/styles/dashboard.scss
+++ b/web/assets/styles/dashboard.scss
@@ -150,6 +150,10 @@ ul {
     -ms-user-select: none;
 }
 
+.gridster-mobile .box-content {
+    position: relative;
+}
+
 .box-header-btns {
     top: 0;
     right: .5rem;
